# robot_api

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
deploy/systemd/: robot-api.env.example  robot-api.service.template  robot-runtime.service.template
docs/: ARCHITECTURE.md  EXECUTION_LOG.md  MILESTONES.md  PRD.md  README.md  ROBOT_SMOKE_CHECKLIST.md  RUNBOOK.md
docs/ADRs/: ADR-001-robot-api-boundary.md
docs/tickets/: TEMPLATE.md
prompts/: planner.md  reviewer.md  worker.md
scripts/: install_runtime_systemd_service.sh  install_systemd_service.sh  run_robot_runtime.sh  run_uvicorn.sh  uninstall_runtime_systemd_service.sh  uninstall_systemd_service.sh
src/robot_api/: config.py  main.py  models.py
src/robot_api/services/: job_store.py  robot_service.py
tests/: README.md  test_api.py  test_config.py  test_integration_mocked_ops.py  test_service.py
